--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 <br>
 <div class="jumbotron">
   <h1 class="display-4">Vik</h1>
-  <p class="lead">Connect with others:<br /> Share stories, news, and quotes!</p>
+  <p class="lead">Connect with others:<br /> Share stories, news, and quotes! <br> PS: If you're worried about unsecure notification that you may (or not) recieve from your browser visit "secure.vik.fyi". (Nothing is different between the secure and unsecure version)
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="{% url 'article_list' %}" role="button">View all connections</a>
   </p>
