--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,13 @@
 
     {# Display django.contrib.messages as Bootstrap alerts #}
     {% bootstrap_messages %}
+    <script async src="//pagead2.googlesyndication.com/pagead/js/       adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-1010439877132577",
+        enable_page_level_ads: true
+      });
+</script>
   </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
