--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -10,7 +10,7 @@
       <span class="text-muted">{{article.author}} | {{article.date}}</span>
     </div>
     <div class="card-body">
-      {{article.body}}
+      {{article.body|linebreaks}}
     </div>
     <div class="card-footer text-center text-muted">
       <a href="{% url 'article_edit' article.pk %}">Edit</a> | <a href="{% url 'article_delete' article.pk %}">Delete</a> | <a href="{% url 'comment_create' article.id %}">Comment</a>
