Linebreaks, and Postgresql fix

--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -3,6 +3,10 @@
 {% block content %}
 {% for article in object_list %}
 <br>
+<div class="alert alert-success" role="alert">
+  You can now format text in your post, meaning if you type this: <br> Me: Vik is awesome <br> Everyone: Yeah <br> it won't come out as: <br> Me: I love vik Everyone: Yeah
+</div>
+<br>
 <br>
 <div class="card">
     <div class="card-header">
